# LibraManager

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  Root.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  libra-manager  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-03-29-164527_create_content/: down.sql  up.sql
src-tauri/migrations/2024-03-31-171215_users_and_books/: up.sql
src-tauri/migrations/2024-03-31-171249_clients/: up.sql
src-tauri/migrations/2024-04-30-095408_populate_books/: down.sql  up.sql
src-tauri/migrations/2024-05-06-101758_intersection_entity/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src/auth/: auth.ts
src/components/books/: BookAdd.tsx  BookEdit.tsx  BookErrorPage.tsx  BookInfo.tsx  BooksIndex.tsx  BooksPage.tsx
src/components/clients/: ClientAdd.tsx  ClientEdit.tsx  ClientErrorPage.tsx  ClientInfo.tsx  ClientsIndex.tsx  ClientsPage.tsx
src/components/index/: GlobalErrorPage.tsx  HomePage.tsx
src/components/login/: LoginPage.tsx
src/components/lookup/: BookLookupPage.tsx
src/components/navigation/: Footer.tsx  NavigationBar.tsx  TitleBar.tsx
src/components/settings/: AccountSettings.tsx  AdminSettings.tsx  GeneralSettings.tsx  UserManagement.tsx  settings.ts
src/components/util/: Input.tsx  ScanIcon.tsx  Scanner.tsx  ScannerModal.tsx  useRootData.ts
