[package]
name = "libra-manager"
version = "0.0.0"
description = "An application for managing records in a library"
authors = ["Alex David"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0.58"
diesel_migrations = "2.1.0"
toml = "0.7.8"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
