[package]
name = "libra-manager"
version = "1.1.0"
description = "LibraManager"
authors = ["Alex David"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "window-hide", "window-show", "window-close", "window-unminimize", "window-maximize", "window-start-dragging", "window-unmaximize", "window-minimize", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0.58"
diesel_migrations = "2.1.0"
toml = "0.7.8"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
barcoders = { version = "2.0.0", features = ["image"] }
image = "0.25.1"
ab_glyph = "0.2.26"
imageproc = "0.24.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
